Domain setup and UnitTest WIth Rx

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 
     // dependencies
     implementation Dependencies.dagger
+    implementation Dependencies.retrofit
+    implementation Dependencies.retrofit_gson
     implementation Dependencies.firebase_firestore
     implementation Dependencies.firebase_auth
     implementation Dependencies.firebase_analytics
@@ -56,6 +58,16 @@ dependencies {
     implementation Dependencies.kotlin_coroutines
     implementation Dependencies.kotlin_coroutines_android
     implementation Dependencies.kotlin_coroutines_play_services
+    implementation Dependencies.rxKotlin
+    implementation Dependencies.rxAndroid
+
+    testImplementation TestDependencies.junit4
+    testImplementation TestDependencies.hamcrest_library
+    testImplementation TestDependencies.mockito_kotlin
+    testImplementation TestDependencies.mockito_inline
+    testImplementation TestDependencies.jupiter_api
+    testImplementation TestDependencies.jupiter_params
+    testRuntimeOnly    TestDependencies.jupiter_engine
 
     // Annotation Processing
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
